--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 :root {
-  --success-color: #2ecc71;
-  --error-color: #e74c3c;
+  --success-color: blue;
+  --error-color: red;
 }
 
 * {
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: #f9fafb;
+  background-color: lightgoldenrodyellow;
   font-family: 'Open Sans', sans-serif;
   display: flex;
   align-items: center;
@@ -19,8 +19,9 @@ body {
   margin: 0;
 }
 
+
 .container {
-  background-color: blue;
+  background-color: peachpuff;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
